[#666] Fix scroll into view cropped

--- a/frontend/src/pages/procurement-library-v2/procurement-library.scss
+++ b/frontend/src/pages/procurement-library-v2/procurement-library.scss
@@ -570,6 +570,8 @@
     }
 
     .sourcing-strategy-cycle-content {
+      scroll-margin-top: 200px;
+
       .sscc-header-wrapper {
         grid-template-columns: 1fr;
         grid-template-rows: auto;
